--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "tsx watch src/http/server.js"
+    "dev": "tsx watch --env-file .env src/http/server.js",
+    "migrate:create": "prisma migrate dev --create-only",
+    "migrate": "prisma migrate dev",
+    "migrate:prod": "prisma migrate deploy"
   },
   "keywords": [],
   "author": "",
@@ -11,10 +14,12 @@
   "description": "",
   "devDependencies": {
     "@types/node": "^20.14.2",
+    "prisma": "^5.15.0",
     "tsx": "^4.15.6",
     "typescript": "^5.4.5"
   },
   "dependencies": {
+    "@prisma/client": "^5.15.0",
     "fastify": "^4.28.0"
   },
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
