--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,8 @@ PGADMIN_DEFAULT_EMAIL=""
 PGADMIN_DEFAULT_PASSWORD=""
 PGADMIN_DEFAULT_PORT=""
 
+JWT_SECRET=""
+
 # This was inserted by `prisma init`:
 # Environment variables declared in this file are automatically made available to Prisma.
 # See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
