--- a/package.json
+++ b/package.json
@@ -20,13 +20,17 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
+    "@fastify/multipart": "^8.3.0",
     "@prisma/client": "^5.15.1",
     "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/uuid": "^10.0.0",
     "@vinejs/vine": "^2.1.0",
     "bcrypt": "^5.1.1",
     "fastify": "^4.28.0",
-    "jsonwebtoken": "^9.0.2"
+    "fastify-multer": "^2.0.3",
+    "jsonwebtoken": "^9.0.2",
+    "uuid": "^10.0.0"
   },
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
