--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,8 +21,10 @@ services:
       - ${PGADMIN_DEFAULT_PORT}
   api:
     env_file: ".env"
+    container_name: api_node
     build: .
     command: "yarn start"
+    restart: always
     working_dir: /app
     volumes:
       - .:/app
