--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
   "description": "",
   "devDependencies": {
     "@types/node": "^20.14.2",
+    "@types/ws": "^8.5.11",
     "prisma": "^5.15.1",
     "tsx": "^4.15.6",
     "typescript": "^5.4.5"
   },
   "dependencies": {
+    "@fastify/cors": "^9.0.1",
     "@fastify/multipart": "^8.3.0",
     "@fastify/static": "^7.0.4",
+    "@fastify/websocket": "^10.0.1",
     "@prisma/client": "^5.15.1",
     "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.6",
@@ -31,6 +34,7 @@
     "fastify": "^4.28.0",
     "fastify-multer": "^2.0.3",
     "jsonwebtoken": "^9.0.2",
+    "socket.io": "^4.7.5",
     "uuid": "^10.0.0"
   },
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
